function(pystreambuf_definition)
    add_library(pystreambuf STATIC pyreadbuf.cpp pyreadintobuf.cpp pywritebuf.cpp)
    target_include_directories(pystreambuf PUBLIC ${Python_INCLUDE_DIRS} ${NCBI_CURRENT_SOURCE_DIR})
endfunction()
NCBI_begin_custom_target(pystreambuf)
    NCBI_project_tags(python)
    NCBI_custom_target_definition(pystreambuf_definition)
    NCBI_headers(pyreadbuf.h pyreadintobuf.h pywritebuf.h)
    NCBI_add_include_directories(${NCBI_CURRENT_SOURCE_DIR})
NCBI_end_custom_target()